@@ -1,3 +1,9 @@
+2007-09-05 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b104
+
+ * Fix: fitToWindow was broken.
+
+ * Fix: unnice wrap in "jumpTo"
+
 2007-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b103
 
  * Change: CSS consolidation for no-skin and jenskin.
